<resources>
    <!-- Descripciones -->
    <string name="app_name">Proyecto Caras UPTx</string>
    <string name="splash_comp_desc">Background of splash screen</string>
    <string name="login_comp_desc">Login component</string>
    <string name="back_btn_desc">Back button</string>
    <string name="navigation_btn_desc">Navigation button</string>
    <string name="social_media_desc">Social media</string>

    <string name="scan_btn_desc">Scanning button icon</string>
    <string name="howto_btn_desc">How to button icon</string>
    <string name="info_btn_desc">Info button icon</string>
    <string name="scan_main_logo">Scanning section logo</string>
    <string name="howto_main_logo">How to section lqqogo</string>
    <string name="info_main_logo">Info section logo</string>
    <string name="scan_area">Scan area</string>

    <string name="login_error_logo">Login error logo</string>
    <string name="forgotten_account_logo">Forgotten account logo</string>

    <!-- Login -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_desc">ingresa los datos de una cuenta válida</string>
    <string name="login_btn">Ingresar</string>
    <string name="forget_pass_btn"><u>¿Olvidaste tu usuario o contraseña?</u></string>
    <string name="info_btn">Más sobre la aplicación</string>
    <string name="username_field">Usuario</string>
    <string name="pass_field">Contraseña</string>

    <!-- Dialog de error de inicio de sesión y cuenta olvidada -->
    <string name="login_error_title">Error de inicio de sesión</string>
    <string name="login_error_desc">El usuario o la contraseña no son correctos, verifica tus datos.</string>
    <string name="forgotten_account_title">Recuperar cuenta</string>
    <string name="forgotten_account_desc">Para recuperar tu cuenta, contacta con el administrador de la aplicación.</string>
    <string name="dialog_text_btn">OK</string>

    <!-- Dashboard -->
    <string name="dashboard_title">Menú principal</string>
    <string name="dashboard_subtitle">elige una opción</string>

    <!-- Textos de menú principal -->
    <string name="scan_btn_title">Iniciar reconocimiento</string>
    <string name="howto_btn_title">¿Cómo usar?</string>
    <string name="info_btn_title">Más información</string>

    <!-- Estados de analisis -->
    <string name="loading">Cargando...</string>
    <string name="scan_success">Pase autorizado</string>
    <string name="scan_failed">Pase denegado</string>
    <string name="scan_caution">Revisar identificación</string>

    <!-- ====================================== -->
    <!-- Contenido de sección 'más información' -->
    <!-- ====================================== -->
    <string name="info_title_1">Reconocimiento Facial UPTx</string>
    <string name="info_desc_1">La aplicación de Reconocimiento Facial de la Universidad Politécnica
        de Tlaxcala es una herramienta para complementar las estrategias de prevención frente al
        coronavirus, permitiendo un ingreso más seguro y controlado a las instalaciones.
        \n\nCon la implementación de esta aplicación se busca mejorar la seguridad de los entornos de
        estudio y de trabajo para nuestros docentes, alumnos y personal en general de la universidad.</string>

    <string name="info_title_2">Acceso a la aplicación</string>
    <string name="info_desc_2">Para tener acceso completo a la aplicación de reconocimiento facial y
        a sus funcionalidades, es necesario iniciar sesión con una cuenta válida, la cual será proveida
        por el administrador de la aplicación a los usuarios correspondientes.
        \n\nEl acceso a esta herramienta no es público, y cualquier uso inapropiado o inicio de sesión no
        autorizado será penalizado.</string>

    <string name="info_title_3">Acerca de</string>
    <string name="info_desc_3">La aplicación fue desarrollada por la Universidad Politécnica de Tlaxcala.
        \n\n<b>Equipo de desarrollo:</b>
        \n\t•  Mtro. Jose Eduardo Xalteno Altamirano
        \n\t•  Andrea Martínez
        \n\t•  Darien Pérez Cano
        </string>

    <string name="info_title_4">Nosotros</string>
    <string name="info_desc_4">Somos una institución con un fuerte compromiso social; actualmente contamos
        con seis programas educativos en Ingeniería: Biotecnología, Química, Financiera, Tecnologías de la
        Información, Industrial y Mecatrónica.</string>
    <string name="info_desc_4_1"><b>Nuestras redes sociales:</b></string>
    <string name="info_version">Versión 1.0</string>
    <string name="info_copyright">Copyright © 2021 Universidad Politécnica de Tlaxcala. Todos los derechos reservados.</string>

    <!-- ====================================== -->
    <!--    Contenido de sección 'cómo usar'    -->
    <!-- ====================================== -->
    <string name="howto_title_1">Iniciar reconocimiento</string>
    <string name="howto_desc_1">En el menú principal, selecciona el botón grande de color rojo con la
        leyenda <i>\"Iniciar reconocimiento\"</i> para empezar con la identificación de rostros.
        \n\nCuando la sección de "Iniciar reconocimiento" inicie, el brillo de la pantalla aumentará
        al máximo, y la cámara frontal será activada, mostrando a la mitad de la pantalla lo que ve
        la cámara y una leyenda que dice <i>\"Por favor, centra tu rostro en la cámara\"</i>.
        \n\nUna vez realizado lo anterior, la aplicación estará lista para validar rostros.</string>
    <string name="howto_title_2">Proceso de reconocimiento</string>
    <string name="howto_desc_2">El proceso de reconocimiento de rostros se realiza de forma automática:
        es decir, una vez se inicie la sección de <i>\"Iniciar reconocimiento\"</i>, la cámara frontal
        del dispositivo identificará los rostros que sean válidos para un análisis.
        \n\nPara que un rostro sea identificado de forma adecuada, la persona debe asegurarse que su rostro,
        preferentemente descubierto, cubra con la sección completa de la cámara.
        \n\nUna vez el rostro de la persona se encuentre en una posición adecuada, la leyenda de la pantalla
        cambiará a <i>\"Analizando...\"</i>. Se deberá de mantener la posición del rostro hasta que se muestre
        un resultado positivo o negativo.</string>
    <string name="howto_title_3">Resultados de análisis</string>
    <string name="howto_desc_3">Al finalizar el análisis del rostro, existe la posibilidad de obtener
        dos resultados distintos: <b>positivo</b> y <b>negativo</b>.</string>
    <string name="howto_title_3_1">Resultado positivo</string>
    <string name="howto_desc_3_1">Un resultado positivo indica que la persona en cuestión está autorizada
        para acceder a la universidad.
        \n\nEste tipo de resultados puede ser identificado por un color verde y una leyenda que dice
        <i>\"Verificado, pase autorizado\"</i>, características que se muestran al final del análisis.</string>
    <string name="howto_title_3_2">Resultado negativo</string>
    <string name="howto_desc_3_2">Un resultado negativo indica que la persona en cuestión <b>no</b> está autorizada
        para acceder a la universidad.
        \n\nEste tipo de resultados puede ser identificado por un color rojo y una leyenda que dice
        <i>\"Verificado, pase denegado\"</i>, características que se muestran al final del análisis.</string>
    <string name="howto_title_4">Solución de problemas</string>
    <string name="howto_desc_4">En caso de presentar alguno de los siguientes problemas o situaciones, deberá
        contactar con el administrador de la aplicación:
        \n\n\t•  Pérdida de usuario o contraseña
        \n\t•  La identificación de rostros no funciona
        \n\t•  La aplicación no abre o funciona mal</string>
</resources>